syntax = "proto3";

package example.users.v1.types;

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string banned_at = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}
